<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <!--
    <TextView
        android:id="@+id/welcomeText"
        style="@style/WelcomeStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Main menu"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageViewStar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewStar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />
-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="#D1C5D3"
        app:itemIconTint="@color/purple_700"
        app:itemTextColor="#0C164A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_main" />
    <!--
    <Button
        android:id="@+id/backButton"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="88dp"
        android:text="Back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent" />
-->

    <Button
        android:id="@+id/toCalendar"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="136dp"
        android:text="@string/calendar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/writeTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="223dp"
        android:ems="10"
        android:hint="@string/visit_my_parents"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/writeDate"
        android:layout_width="255dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Double press to select a date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeTime" />

    <Button
        android:id="@+id/toList"
        android:layout_width="199dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/check_the_list"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTask" />

    <EditText
        android:id="@+id/writeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="239dp"
        android:ems="10"
        android:hint="18:00"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeTask" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="234dp"
        android:layout_height="41dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="25dp"
        android:text="@string/press_the_icon_to_add_a_location"
        android:textSize="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@+id/addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeDate"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="197dp"
        android:layout_height="61dp"
        android:layout_marginTop="92dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeDate" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="23dp"
        android:background="@color/teal_700"
        android:contentDescription="@string/map"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_constraintEnd_toStartOf="@+id/textLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeDate" />


</androidx.constraintlayout.widget.ConstraintLayout>